<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Nomads</string>
	<string name="welcome">Welcome to Nomads.</string>
	<string name="login">Log in</string>
	<string name="loginPrompt">Enter your ID:</string>
	<string name="disconnect">Disconnect</string>
	<string name="quit">Quit</string>
	<string name="incoming"></string>
    <string name="outgoing"></string>
    <string name="connected">Connected to Nomads server.</string>
    <string name="hint">Enter a message.</string>
    <string name="sendButton">Send</string>
    <string name="sendToCloudButton">Send to Cloud</string>
    <string name="test">test</string>
</resources>