<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/promptIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/incoming" />

	<EditText
	    android:id="@+id/textOut"
	    android:layout_width="0dip"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/promptIn"
	    android:layout_toLeftOf="@+id/send"
	    android:layout_alignParentLeft="true"
	    android:ems="10"
	    android:hint="@string/hint"
	    android:inputType="text"
	    android:text="@string/outgoing" >
	
	    <requestFocus />
	</EditText>
	
	<Button
	    android:id="@+id/send"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/promptIn"
	    android:layout_alignParentRight="true"
	    android:text="@string/sendButton" />


    <TextView
        android:id="@+id/messageViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textOut"
        android:scrollbars="vertical" />

</RelativeLayout>